--- a/lib/app/content/content.html
+++ b/lib/app/content/content.html
@@ -1,61 +1,77 @@
-<div v-if="loading">loading...</div>
+<div class="container" v-if="!isReady">
+  <webview id="actual" :src="src" class="secret" preload="./content/analyze.js" partition="temp"></webview>
+  <div class="page-header">
+    <div class="row">
+      <div class="col-md-12">
+        <p class="lead">{{ state }}...</p>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container" v-else>
   <div class="page-header">
     <div class="row">
       <div class="col-md-12">
-        <p class="lead">{{{ meta['og:title'] || meta.title || title }}}</p>
+        <p class="lead">{{{ data.title }}}</p>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <p v-for="paragraph in paragraphs">{{{ paragraph }}}</p>
+      <div class="row" v-if="data.summary">
+        <h4>summary</h4>
+        <p>{{ data.summary | json }}</p>
+      </div>
+      <div class="row" v-if="data.paragraphs.length">
+        <h4>full text</h4>
+        <p v-for="p in data.paragraphs">{{{ p }}}</p>
+      </div>
     </div>
     <div class="col-md-6">
-      <div class="row" v-if="meta['og:url'] || src">
-        <h4>source</h4>
-        <p><a :href="#">{{ meta['og:url'] || src }}</a></p>
-      </div>
-      <div class="row" v-if="meta['og:site_name']">
+      <div class="row" v-if="data.siteName">
         <h4>site</h4>
-        <p>{{{ meta['og:site_name'] }}}</p>
-      </div>
-      <div class="row" v-if="meta.Section || meta.Subsection">
-        <h4>section</h4>
-        <p>{{{ meta['Section'] }}}<span v-if="meta['Subsection']"> > {{{ meta['Subsection'] }}}<span></p>
-      </div>
-      <div class="row" v-if="meta.author || meta.Author">
-        <h4>author</h4>
-        <p>{{{ meta.author }}}<span v-if="meta.author">, </span>{{{ meta.Author }}}</p>
-        <p v-if="meta.owner">{{{ meta.owner }}}</p>
+        <p>{{ data.siteName }}</p>
       </div>
       <div class="row">
-        <h4>date</h4>
-        <p>{{{ meta['og:updated_time'] || meta['DisplayDate'] }}}</p>
+        <h4>source</h4>
+        <p><a :href="#" @click="openSource()">{{ data.url || src }}</a></p>
       </div>
-      <div class="row" v-if="meta['og:description'] || meta.description">
+      <div class="row" v-if="data.sections.length">
+        <h4>section</h4>
+        <p>{{ data.sections.join(' > ') }}</p>
+      </div>
+      <div class="row" v-if="data.type">
+        <h4>type</h4>
+        <p>{{ data.type }}</p>
+      </div>
+      <div class="row" v-if="data.authors.length">
+        <h4>author</h4>
+        <p v-for="a in data.authors">{{ a }}</p>
+      </div>
+      <div class="row" v-if="data.date.published">
+        <h4>published</h4>
+        <p>{{ data.date.published }}</p>
+      </div>
+      <div class="row" v-if="data.date.updated">
+        <h4>updated</h4>
+        <p>{{ data.date.updated }}</p>
+      </div>
+      <div class="row" v-if="data.description">
         <h4>description</h4>
-        <p>{{{ meta['og:description'] || meta.description }}}</p>
+        <p>{{ data.description }}</p>
       </div>
-      <div class="row" v-if="meta.abstract">
+      <div class="row" v-if="data.abstract">
         <h4>abstract</h4>
-        <p>{{{ meta.abstract }}}</p>
+        <p>{{ data.abstract }}</p>
       </div>
-      <div class="row" v-if="meta['og:image']">
+      <div class="row" v-if="data.image">
         <h4>image</h4>
-        <img :src="meta['og:image']" class="col-md-6">
+        <img :src="data.image" class="col-md-6">
       </div>
-      <div class="row" v-if="meta.keywords">
+      <div class="row" v-if="data.keywords.length">
         <h4>keywords</h4>
-        <p>{{{ meta.keywords }}}</p>
+        <p>{{{ data.keywords.join(', ') }}}</p>
       </div>
-      <div class="row" v-if="meta['og:locale']">
-        <h4>locale</h4>
-        <p>{{{ meta['og:locale'] }}}</p>
-      </div>
-      <!--<ul>
-        <li v-for="m in meta.all">{{{ m.name }}} : {{{ m.content }}}</li>
-      </ul>-->
     </div>
   <div>
 </div>
