--- a/lib/app/index.html
+++ b/lib/app/index.html
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title>Hello World!</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
 
   </head>
