--- a/lib/app/content/content.html
+++ b/lib/app/content/content.html
@@ -1,7 +1,7 @@
 <div class="container" v-if="!isReady">
   <div class="page-header">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12 col-sm-12 col-md-12">
         <p class="lead">{{ state }}...</p>
       </div>
     </div>
@@ -10,13 +10,13 @@
 <div class="container" v-else>
   <div class="page-header">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-xs-6 col-sm-6 col-md-6">
         <p class="lead">{{{ data.softTitle || data.title }}}</p>
       </div>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-xs-4 col-sm-6 col-md-6">
       <div class="row" v-if="data.summary">
         <h4 v-if="mode=='summary'">summary | <a href="#" @click="showText()">full text</a></h4>
         <h4 v-if="mode=='text'"><a href="#" @click="showSummary()">summary</a> | full text</h4>
@@ -24,33 +24,33 @@
         <p v-if="mode=='text'" track-by="$index" v-for="p in data.text.split('\n')">{{ p }}</p>
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-xs-8 col-sm-6 col-md-6">
       <div class="container">
         <div class="row" v-if="data.image">
-          <img :src="data.image" class="col-md-4">
+          <img :src="data.image" class="col-xs-6 col-sm-4 col-md-4">
         </div>
         <div class="row" v-if="data.publisher">
           <h4>publisher</h4>
-          <div class="col-md-4">
+          <div class="col-xs-6 col-sm-4 col-md-4">
             <img v-if="data.favicon" :src="data.favicon">
             <a href="#" @click="openSource(data.canonicalLink)">{{ data.publisher }}</a>
           </div>
         </div>
         <div class="row" v-if="data.author.length">
           <h4>author</h4>
-          <p class="col-md-4">{{ data.author.join(', ') }}</p>
+          <p class="col-xs-6 col-sm-4 col-md-4">{{ data.author.join(', ') }}</p>
         </div>
         <div class="row" v-if="data.tags.length">
           <h4>keywords</h4>
-          <p class="col-md-4">{{{ data.tags.join(', ') }}}</p>
+          <p class="col-xs-6 col-sm-4 col-md-4">{{{ data.tags.join(', ') }}}</p>
         </div>
         <div class="row" v-if="data.date">
           <h4>date</h4>
-          <p class="col-md-4">{{{ data.date }}}</p>
+          <p class="col-xs-6 col-sm-4 col-md-4">{{{ data.date }}}</p>
         </div>
         <div class="row" v-if="data.copyright">
           <h4>copyright</h4>
-          <p class="ellipsis col-md-4">{{{ data.copyright }}}</p>
+          <p class="ellipsis col-xs-6 col-sm-4 col-md-4">{{{ data.copyright }}}</p>
         </div>
       </div>
     </div>
