Moving the add item into component

--- a/lib/app/main/main.html
+++ b/lib/app/main/main.html
@@ -21,26 +21,6 @@
           <content :item="item"></content>
         </div>
     </div>
-    <div class="tab-pane" id="add">
-      <div class="container">
-        <div class="page-header">
-          <div class="row">
-            <div class="col-xs-6 col-sm-6 col-md-6">
-              <p class="lead">Read Page</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6">
-            <div class="form-group">
-              <input type="text" class="form-control" id="addUrl" placeholder="url" v-model="addUrl">
-            </div>
-            <div class="form-group">
-              <button type="button" class="btn btn-success" @click="read()">Read</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <add></add>
   </div>
 </div>
